workflow import/export & unlock workflow

--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -765,6 +765,17 @@
       "upstreamTable": "Upstream staging table",
       "dbinfs": "Database information",
       "tableifs": "Table information",
+      "transfer": "Table Transfer",
+      "transferTitle": "Table Transfer",
+      "transferForm": {
+        "title": "Title",
+        "owner": "Table owner",
+        "admin": "Administrator",
+        "desc": "Description",
+        "required": "Required",
+        "ownerplaceholder": "请准确填写表转移后属主的企业微信英文名",
+        "adminplaceholder": "请准确填写部门数据治理管理员的企业微信英文名"
+      },
       "loadingwait": "Loading, please wait",
       "loading": "Loading",
       "running": "Running prompt",
@@ -818,7 +829,7 @@
       "copytbanme": "Copy table name",
       "batchdel": "Batch deletion",
       "Serial": "Serial number",
-      "checkdelconfirm": "Please check again to confirm deletion",
+      "checkdelconfirm": "Please check again to confirm",
       "tablename": "Table name",
       "tbalias": "Table alias",
       "createtime": "Create time",
@@ -828,7 +839,6 @@
       "compressformat": "Compressed format",
       "lastaccess": "Last access time",
       "lastupdate": "Last update time",
-      "selectdel": "Please select items to delete",
       "createtime：": "Create time：",
       "nodata": "No data",
       "retry": "Please retry！",
