--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -764,6 +764,17 @@
       "upstreamTable": "上游暂存表",
       "dbinfs": "库基本信息",
       "tableifs": "库表信息",
+      "transfer": "批量转移",
+      "transferTitle": "表属主转移",
+      "transferForm": {
+        "title": "申请单标题",
+        "owner": "表转移后属主",
+        "admin": "数据治理管理员",
+        "desc": "描述",
+        "required": "该项必填",
+        "ownerplaceholder": "请准确填写表转移后属主的企业微信英文名",
+        "adminplaceholder": "请准确填写部门数据治理管理员的企业微信英文名"
+      },
       "loadingwait": "数据加载中，请耐心等待",
       "loading": "数据正在加载中",
       "running": "运行提示",
@@ -817,7 +828,7 @@
       "copytbanme": "复制表名",
       "batchdel": "批量删除",
       "Serial": "序号",
-      "checkdelconfirm": "请再次勾选确认删除项",
+      "checkdelconfirm": "请再次勾选进行确认",
       "tablename": "表名",
       "tbalias": "表别名",
       "createtime": "创建时间",
@@ -827,7 +838,6 @@
       "compressformat": "压缩格式",
       "lastaccess": "最近访问时间",
       "lastupdate": "最近修改时间",
-      "selectdel": "请先选择删除项",
       "createtime：": "创建时间：",
       "nodata": "暂无数据",
       "retry": "重试！",
