--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -2,6 +2,7 @@
   "message": {
     "workflow": {
       "downloadTolocal": "Successfully downloaded, please check from local download directory!",
+      "downloadrequest": "Download request send Successfully, please check from local download directory!",
       "script": "Script",
       "name": "Name",
       "detail": "Details",
@@ -405,10 +406,24 @@
       "ShareProj": "Share projects",
       "Simultaneously": "Simultaneously delete all third-party system projects",
       "Essential": "Essential attributes",
-      "CreateUser": "Create user",
-      "CreateTime": "Create time",
-      "LastModifyUser": "Last modified user",
-      "LastModifyTime": "Last modified time",
+      "unlock": "Unlock",
+      "unlockflow": "Unlock",
+      "unlockflowtitle": "Confirm unlock workflow",
+      "unlocktip": "Unlock workflow",
+      "CreateUser": "Create user:",
+      "CreateTime": "Create time:",
+      "LastModifyUser": "Last modified user:",
+      "LastModifyTime": "Last modified time:",
+      "ImportType": "Import type：",
+      "zipfile": "From zip file",
+      "hdfs": "From HDFS",
+      "Zip": "Zip file path：",
+      "Upload": "Upload Zip file：",
+      "zippath": "Please input zip file hdfs path",
+      "typerequired": "Import type is required",
+      "fileempty": "Import file is required",
+      "Path": "Path is required",
+      "importflow": "Import workflow",
       "Nopermission": "No ops permission",
       "Configuration": "Configuration",
       "Delete": "Delete",
