--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -2,6 +2,7 @@
   "message": {
     "workflow": {
       "downloadTolocal": "下载成功，请到本地的download文件夹查看！",
+      "downloadrequest": "请求已发出，下载完成后，请到本地download文件夹查看",
       "script": "脚本",
       "name": "名称",
       "detail": "详情",
@@ -406,10 +407,24 @@
       "ShareProj": "共享项目",
       "Simultaneously": "同步删除所有第三方系统的工程",
       "Essential": "基础属性",
-      "CreateUser": "创建用户",
-      "CreateTime": "创建时间",
-      "LastModifyUser": "最近修改用户",
-      "LastModifyTime": "最近修改时间",
+      "unlock": "解锁",
+      "unlockflow": "确认解锁工作流",
+      "unlockflowtitle": "解锁工作流",
+      "unlocktip": "注意：当前工作流已被 {name} 锁定，强制解锁工作流，会导致 {name} 已编辑未保存的内容无法保存，请与 {name} 确认后再解锁工作流",
+      "CreateUser": "创建用户：",
+      "CreateTime": "创建时间：",
+      "LastModifyUser": "最近修改用户：",
+      "LastModifyTime": "最近修改时间：",
+      "ImportType": "导入方式：",
+      "zipfile": "从Zip包导入",
+      "hdfs": "从HDFS导入",
+      "Zip": "Zip包路径：",
+      "Upload": "Zip包上传：",
+      "zippath": "请输入zip包的HDFS路径",
+      "typerequired": "导入方式必填",
+      "fileempty": "导入文件必填",
+      "Path": "路径必填",
+      "importflow": "导入工作流",
       "Nopermission": "无运维权限",
       "Configuration": "配置",
       "Delete": "删除",
