Modify some unuseful links.

--- a/web/docs/zh_CN/ch2/前台编译文档.md
+++ b/web/docs/zh_CN/ch2/前台编译文档.md
@@ -50,7 +50,7 @@ npm run build
 npm run serve
 ```
 
-在浏览器中（建议Chrome浏览器）通过链接访问应用：[http://localhost:8080/](http://localhost:8080/) .
+在浏览器中（建议Chrome浏览器）通过链接访问应用：```http://localhost:8080/```
 当您使用该方式运行项目时，您对代码的改动产生的效果，会动态体现在浏览器上。
 
 **注意：因为项目采用前后端分离开发，所以在本地浏览器上运行时，需要对浏览器进行设置跨域才能访问后端接口：**
