--- a/web/packages/shared/common/i18n/en.json
+++ b/web/packages/shared/common/i18n/en.json
@@ -208,6 +208,8 @@
         "KX": "Idle",
         "FM": "Busy",
         "QD": "Starting",
+        "Running": "Running",
+        "ShuttingDown": "Shutting Down",
         "LX": "By category",
         "AZT": "By status",
         "DDJK": "Waiting for API response!",
@@ -216,6 +218,8 @@
         "RWGLQ": "Task Management",
         "YQGLQ": "Engine Management",
         "DLGLQ": "Queue Management",
+        "QX": "Select All",
+        "QXQX": "Deselect All",
         "SX": "Refresh",
         "JSRW": "Cancel task",
         "JSYQ": "Shut down engine",
