--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -209,6 +209,8 @@
         "KX": "空闲",
         "FM": "繁忙",
         "QD": "启动",
+        "Running": "运行中",
+        "ShuttingDown": "关闭中",
         "LX": "按类别",
         "AZT": "按状态",
         "DDJK": "请等待接口返回！",
@@ -217,6 +219,8 @@
         "RWGLQ": "任务管理器",
         "YQGLQ": "引擎管理器",
         "DLGLQ": "队列管理器",
+        "QX": "全选",
+        "QXQX": "取消全选",
         "SX": "刷新",
         "JSRW": "结束任务",
         "JSYQ": "结束引擎",
