--- a/web/packages/workflows/i18n/common/en.json
+++ b/web/packages/workflows/i18n/common/en.json
@@ -400,6 +400,7 @@
       "selcProj": "Please choose project",
       "Copyreq": "Copy request sent successfully",
       "CopySucceed": "Copy workflow successfully",
+      "CopyFailed": "Copy workflow failed",
       "Project": "Project",
       "AllProj": "All projects",
       "Individual": "Individual projects",
@@ -409,6 +410,7 @@
       "unlock": "Unlock",
       "unlockflow": "Unlock",
       "unlockflowtitle": "Confirm unlock workflow",
+      "unlocksuccess": "Unlock successfully",
       "unlocktip": "Unlock workflow",
       "CreateUser": "Create user:",
       "CreateTime": "Create time:",
