--- a/web/packages/workflows/i18n/common/zh.json
+++ b/web/packages/workflows/i18n/common/zh.json
@@ -401,6 +401,7 @@
       "selcProj": "请选择项目",
       "Copyreq": "复制请求发送成功",
       "CopySucceed": "复制成功",
+      "CopyFailed": "复制失败",
       "Project": "项目",
       "AllProj": "所有项目",
       "Individual": "个人项目",
@@ -410,6 +411,7 @@
       "unlock": "解锁",
       "unlockflow": "确认解锁工作流",
       "unlockflowtitle": "解锁工作流",
+      "unlocksuccess": "解锁成功",
       "unlocktip": "注意：当前工作流已被 {name} 锁定，强制解锁工作流，会导致 {name} 已编辑未保存的内容无法保存，请与 {name} 确认后再解锁工作流",
       "CreateUser": "创建用户：",
       "CreateTime": "创建时间：",
