--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -196,6 +196,8 @@
         "GBKBTS": "关闭库表联想",
         "DKKBTS": "打开库表联想",
         "DKZDHH": "自动换行",
+        "newdbcomplition": "库表联想-Beta",
+        "dbcomplition": "库表联想-Release",
         "GBZDHH": "关闭自动换行",
         "GYFSYGWYF": "该语法属于高危语法，请谨慎操作！"
       },
