--- a/web/packages/workspace/i18n/en.json
+++ b/web/packages/workspace/i18n/en.json
@@ -238,6 +238,7 @@
       "baseInfo": "Basic info",
       "userInfo": "User info",
       "authInfo": "Authority info",
+      "engineInfo": "Engine info",
       "editDataSour": "Edit dataSource",
       "delDataSour": "Delete dataSource",
       "addDataSour": "Add dataSource",
@@ -279,6 +280,28 @@
         "no": "No"
       },
       "JdbcUrlFormat": "please enter URL such as jdbc:mysql://ServerIP:Port/Database"
+    },
+    "enginelist": {
+      "engineType": "引擎类型：",
+      "queue": "队列：",
+      "user":"用户：",
+      "status":"状态：",
+      "find": "查询",
+      "stop": "批量停止",
+      "viewlog": "查看日志",
+      "cols": {
+        "engineinst": "引擎实例",
+        "taskid": "任务ID",
+        "enginetype": "引擎类型",
+        "status": "状态",
+        "queue": "队列",
+        "local": "本地资源",
+        "yarnmb": "Yarn资源（已分配MB）",
+        "yanrcores": "Yarn资源（已分配Vcores）",
+        "creator": "创建者",
+        "start": "启动时间",
+        "action": "操作"
+      }
     },
     "Project": {
       "title": "Project list",
