库表实时查询&引擎列表修改

--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -823,6 +823,8 @@
       "dbsize": "Database size",
       "dbquota": "Database quota",
       "tablenum": "Number of tables",
+      "dbinfotips": "Note: The database name has a one-day delay, the database size has an hour level delay, and the table quantity displayed in real time",
+      "dbdesc": "Description",
       "plstablename": "Please input the table name",
       "defaultsort": "Default sort order",
       "ordersize": "Order by table size",
@@ -832,9 +834,12 @@
       "tablecreateby": "Tables I create",
       "Search": "Search",
       "copytbanme": "Copy table name",
+      "searchnow": "Real-time Search",
+      "realsearchTip": "Real time return of the existing tables in the current database. If the table has too much data, \nit may take some time to wait for the query results to return",
       "batchdel": "Batch deletion",
       "Serial": "Serial number",
       "checkdelconfirm": "Please check again to confirm",
+      "selectfirst": "Please select!",
       "tablename": "Table name",
       "tbalias": "Table alias",
       "createtime": "Create time",
