--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -822,6 +822,8 @@
       "dbsize": "库大小",
       "dbquota": "库配额",
       "tablenum": "表数量",
+      "dbinfotips": "说明：库名展示的数据存在一天的延时，库大小展示的数据存在小时级别的延时，表数量数据为实时展示",
+      "dbdesc": "备注",
       "plstablename": "请输入表名",
       "defaultsort": "默认排序",
       "ordersize": "表大小排序",
@@ -831,9 +833,12 @@
       "tablecreateby": "我创建的表",
       "Search": "查询",
       "copytbanme": "复制表名",
+      "searchnow": "实时查询",
+      "realsearchTip": "实时返回当前库下存在的表，表数据量过多时，\n可能需要一些时间等待查询结果返回",
       "batchdel": "批量删除",
       "Serial": "序号",
       "checkdelconfirm": "请再次勾选进行确认",
+      "selectfirst": "请先选择",
       "tablename": "表名",
       "tbalias": "表别名",
       "createtime": "创建时间",
