--- a/web/packages/workspace/i18n/en.json
+++ b/web/packages/workspace/i18n/en.json
@@ -282,25 +282,26 @@
       "JdbcUrlFormat": "please enter URL such as jdbc:mysql://ServerIP:Port/Database"
     },
     "enginelist": {
-      "engineType": "引擎类型：",
-      "queue": "队列：",
-      "user":"用户：",
-      "status":"状态：",
-      "find": "查询",
-      "stop": "批量停止",
-      "viewlog": "查看日志",
+      "engineType": "Engine Type：",
+      "queue": "Yarn Queue：",
+      "user":"User：",
+      "status":"Status：",
+      "find": "Search",
+      "stop": "Stop",
+      "viewlog": "View log",
+      "selectfirst": "Please select!",
       "cols": {
-        "engineinst": "引擎实例",
-        "taskid": "任务ID",
-        "enginetype": "引擎类型",
-        "status": "状态",
-        "queue": "队列",
-        "local": "本地资源",
-        "yarnmb": "Yarn资源（已分配MB）",
-        "yanrcores": "Yarn资源（已分配Vcores）",
-        "creator": "创建者",
-        "start": "启动时间",
-        "action": "操作"
+        "engineinst": "Engine Instance",
+        "taskid": "Task Id",
+        "enginetype": "Engine Type",
+        "status": "Status",
+        "queue": "Yarn Queue",
+        "local": "Local Resource",
+        "yarnmb": "Yarn Resource（MB）",
+        "yanrcores": "Yarn Resource（Vcores）",
+        "creator": "Create User",
+        "start": "Start Time",
+        "action": "Operation"
       }
     },
     "Project": {
