--- a/web/packages/workspace/i18n/zh.json
+++ b/web/packages/workspace/i18n/zh.json
@@ -290,6 +290,11 @@
       "stop": "批量停止",
       "viewlog": "查看日志",
       "selectfirst": "请先选择",
+      "hasBusy": "存在状态为繁忙的引擎被选中，强制停止会导致该引擎上正在运行的任务失败，建议停止前与引擎创建者确认。",
+      "stopTip": "注意：当需要停止的引擎较多时，后台需要时间处理请求，请稍等一段时间后再查询引擎状态。",
+      "stopConfirm": "确认停止当前选中的引擎？",
+      "stoptitle": "批量停止引擎",
+      "stopReq": "擎停止请求发送成功，可稍后通过搜索查询引擎状态",
       "cols": {
         "engineinst": "引擎实例",
         "taskid": "任务ID",
