update version tip & fix engine list

--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -788,7 +788,8 @@
       "reporterror": "Report error",
       "reported": "Error reported",
       "optlimit": "Please do not operate frequently",
-      "optsuccess": "Operate success",
+      "optsuccess": "Successfully open the notification. You will receive the notification after the task is completed.",
+      "cancelOptSuccess": "Successfully closed the notification, you will not receive the task end notification",
       "Permanent": "Permanent",
       "validday": "Valid for today only",
       "validweek": "Valid for one week",
