--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -787,7 +787,8 @@
       "reporterror": "上报错误",
       "reported": "错误已上报",
       "optlimit": "请勿频繁操作",
-      "optsuccess": "操作成功",
+      "optsuccess": "成功开启通知，任务结束后您将收到通知。",
+      "cancelOptSuccess": "成功关闭通知，您将不会收到任务结束通知",
       "Permanent": "永久",
       "validday": "当天有效",
       "validweek": "一周有效",
