--- a/web/packages/shared/common/i18n/en.json
+++ b/web/packages/shared/common/i18n/en.json
@@ -554,9 +554,9 @@
       "Close": "Close",
       "nodeNotFound": "Node not found",
       "updatetitle": "Update",
-      "updatenow": "立即更新",
-      "viewchange": "查看更多版本特性",
-      "updateTip": "为确保您可以正常使用DSS请通过【立即更新】获取最新版本"
+      "updatenow": "Update now",
+      "viewchange": "View more features“",
+      "updateTip": "To ensure your normal use of DSS, please obtain the latest version through [Update Now]"
     },
     "workflow": {
       "downloadTolocal": "Successfully downloaded, please check from local download directory!",
