engine list column change & fix bugs

--- a/web/packages/shared/common/i18n/en.json
+++ b/web/packages/shared/common/i18n/en.json
@@ -547,8 +547,7 @@
       "Development": "Development center",
       "Production": "Production center",
       "No": "No data",
-      "Loading": "Loading",
-      "Please": "Please wait",
+      "Loading": "Loading...",
       "AddTags": "Add tags",
       "Search": "Search node：",
       "Close": "Close",
