--- a/web/packages/shared/common/i18n/zh.json
+++ b/web/packages/shared/common/i18n/zh.json
@@ -547,8 +547,7 @@
       "Development": "开发中心",
       "Production": "生产中心",
       "No": "暂无数据",
-      "Loading": "加载中",
-      "Please": "请稍候",
+      "Loading": "加载中，请稍候...",
       "AddTags": "新增标签",
       "Search": "搜索节点：",
       "Close": "关闭",
