fix: fix en text & watermark refresh

--- a/web/packages/scriptis/i18n/common/en.json
+++ b/web/packages/scriptis/i18n/common/en.json
@@ -590,7 +590,7 @@
           "save": "Save",
           "saveAs": "Save As"
         },
-        "tips": "<div style='font-weight:600'>Guidelines for Scriptis：</div><div style='padding-left:10px'>1. Set parameters: Set the queue and parameters on the management console<br>2. New Script: Right click to create the required script<br>3. Edit script: edit sql or command in the corresponding script file<br>4. Submit for execution: run the selected sql or command<br>5. Result query: query execution results and logs</div><div style='font-weight:600'>Go to <a>Quickly Use Scriptis</a> for more detailed instructions</div>",
+        "tips": "<div style='font-weight:600'>Guidelines for Scriptis：</div><div style='padding-left:10px'>1. Set parameters: Set the queue and parameters on the management console<br>2. New Script: Right click to create the required script<br>3. Edit script: edit sql or command in the corresponding script file<br>4. Submit for execution: run the selected sql or command<br>5. Result query: query execution results and logs</div><div style='font-weight:600'>Go to <a href='_book/快速入门/Scriptis快速入门.html' target='_blank'>Quickly Use Scriptis</a> for more detailed instructions</div>",
         "warning": {
           "noDBInfo": "Failed to request database/table information, word association in script may not be working well! Please refresh to retry!",
           "noUDF": "Failed to request UDF and Method information, word association in script may not be working well! Please refresh to retry!",
