--- a/web/packages/scriptis/i18n/common/zh.json
+++ b/web/packages/scriptis/i18n/common/zh.json
@@ -589,7 +589,7 @@
           "save": "保存",
           "saveAs": "另存为"
         },
-        "tips": "<div style='font-weight:600'>Scriptis使用指引：</div><div style='padding-left:10px'>1.设置参数:在管理台设置队列及参数<br>2.新建脚本:右键新建所需脚本<br>3.编辑脚本:在对应的脚本文件中编辑Sql或命令<br>4.提交执行:运行选中的sql或命令<br>5.结果查询:查询执行结果及日志</div><div style='font-weight:600'>前往<a>快速使用Scriptis</a>了解更详细的使用指引</div>",
+        "tips": "<div style='font-weight:600'>Scriptis使用指引：</div><div style='padding-left:10px'>1.设置参数:在管理台设置队列及参数<br>2.新建脚本:右键新建所需脚本<br>3.编辑脚本:在对应的脚本文件中编辑Sql或命令<br>4.提交执行:运行选中的sql或命令<br>5.结果查询:查询执行结果及日志</div><div style='font-weight:600'>前往<a href='_book/快速入门/Scriptis快速入门.html' target='_blank'>快速使用Scriptis</a>了解更详细的使用指引</div>",
         "warning": {
           "noDBInfo": "未获取到数据库表信息，脚本联想词功能可能存在异常！可刷新重试！",
           "noUDF": "未获取到UDF和方法函数信息，脚本联想词功能可能存在异常！可刷新重试！",
